script.js and style.css updates
- Fixed Ghost collision
- Fixed Walls
- Fixed Canvas formatting with browser.

--- a/index.html
+++ b/index.html
@@ -8,11 +8,9 @@
 </head>
 <body>
 
-<div id="zoom-instructions" style="display: none;">
-    Please zoom in to 120% for the best experience!
-</div>
-
-    <script src="script.js"></script>
+    <div id="container">
+        <script src="script.js"></script>
+    </div>
 
 </body>
 </html>
